# almira-project1

./: .gitignore  CMakeLists.txt  Makefile  PROJECT_STATUS.md  README.md  assignment_text.txt  output_Algorithm_0_vs_Algorithm_1_on_input1.txt_1756234360350.txt  students.txt
Algorithm/: AggressiveTankAI_212934582_323964676.cpp  AggressiveTankAI_212934582_323964676.h  CMakeLists.txt  Makefile  Player_Aggressive_212934582_323964676.cpp  Player_Aggressive_212934582_323964676.h  Player_Simple_212934582_323964676.cpp  Player_Simple_212934582_323964676.h  TankAlgorithm_Simple_212934582_323964676.cpp  TankAlgorithm_Simple_212934582_323964676.h  competition_20250818_185642_484.txt  competition_20250818_185726_666.txt  competition_20250825_114615.txt  competition_20250825_132705.txt  competition_20250825_132948.txt  competition_20250826_182521.txt  competition_20250826_184503.txt  competition_20250826_212541.txt  competition_20250826_215341.txt  input1.txt  input3.txt  library_init_212934582_323964676.cpp  library_init_aggressive_212934582_323964676.cpp  library_init_simple_212934582_323964676.cpp  registration_all_212934582_323964676.cpp
GameManager/: CMakeLists.txt  GameManager_212934582_323964676.cpp  GameManager_212934582_323964676.h  Makefile  MySatelliteView.h  comparative_results_20250818_193706_268.txt  comparative_results_20250818_195855_729.txt  comparative_results_20250818_200114_288.txt  comparative_results_20250818_200632_126.txt  comparative_results_20250818_205539_734.txt  comparative_results_20250818_210939_995.txt  comparative_results_20250818_212149_771.txt  comparative_results_20250820_120537_306.txt  comparative_results_20250820_120623_652.txt  comparative_results_20250820_123218_119.txt  comparative_results_20250820_124919_486.txt  comparative_results_20250820_130024_469.txt  comparative_results_20250820_130415_562.txt  comparative_results_20250820_130803_506.txt  comparative_results_20250820_132710_510.txt  comparative_results_20250820_132752_781.txt  comparative_results_20250820_141222_503.txt  comparative_results_20250820_143733_584.txt  comparative_results_20250821_010244_893.txt  comparative_results_20250825_135549.txt  library_init_212934582_323964676.cpp
Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  CMakeLists.txt  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  GameManagerRegistrar.h  GameManagerRegistration.cpp  Makefile  PlayerRegistration.cpp  Simulator.cpp  Simulator.h  TankAlgorithmRegistration.cpp  main.cpp  simulator_212934582_323964676
UserCommon/: MembershipCLI_212934582_323964676.cpp  MembershipCLI_212934582_323964676.h  MembershipManager_212934582_323964676.cpp  MembershipManager_212934582_323964676.h  Membership_212934582_323964676.cpp  Membership_212934582_323964676.h  MyBattleInfo_212934582_323964676.h  UserCommon_212934582_323964676.h  User_212934582_323964676.cpp  User_212934582_323964676.h  Utils_212934582_323964676.h
common/: AbstractGameManager.h  ActionRequest.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmRegistration.h
hw3_new/: README.md  changes.txt  comparative_results_1756281936583727600.txt  comparative_results_1756282112105005900.txt  comparative_results_1756283368725501800.txt  extract_pdf.py  makefile  map.txt  output_1-Small battlefield.txt  simulator_322837089_212141253  students.txt
hw3_new/Algorithm/: Algorithm_322837089_212141253  Player_322837089_212141253.cpp  Player_322837089_212141253.h  TankAlgorithm_322837089_212141253.cpp  TankAlgorithm_322837089_212141253.h  makefile
hw3_new/GameManager/: GameManager_322837089_212141253.cpp  GameManager_322837089_212141253.h  makefile
hw3_new/Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  GameManagerRegistrar.cpp  GameManagerRegistrar.h  GameManagerRegistration.cpp  PlayerRegistration.cpp  TankAlgorithmRegistration.cpp  makefile  simulator.cpp  simulator.h
hw3_new/common/: AbstractGameManager.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  TankAlgorithm.h
